# gencloud

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  publish.yml
example/: config.json
src/: lib.rs  main.rs
src/config/: base.rs  mod.rs  parse.rs  tls.rs
src/protocol/: mod.rs
src/protocol/common/: request.rs
src/protocol/trojan/: base.rs  handler.rs  inbound.rs  mod.rs  parser.rs
src/proxy/: base.rs  mod.rs  server.rs
src/proxy/tcp/: acceptor.rs  handler.rs
src/xflash/: mod.rs  parse.rs  traffic.rs  user.rs
