[package]
name = "torture"
version = "0.1.20"
authors = ["himanhimao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bytes = "1.1.0"
clap = "3.0.14"
env_logger = "0.9.0"
futures = { version = "0.3.21", features = ["thread-pool"] }
log = "0.4.14"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10.1" }
tokio = { version = "1.7.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1.8" }
tokio-rustls = "0.23.2"
rustls-pemfile = "0.3.0"
reqwest={ version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
anyhow="1.0"
byte-unit = "4.0.13"
# thiserror = "1.0"


[lib]
name = "torture"
path = "src/lib.rs"

[[bin]]
name = "torture"
path = "src/main.rs"
